# Budget-management-app

./: README.md  Users.db  app.py  apptst.py  forms.py  pyproject.toml  wstest.py
Tests/: pyproject.toml
Tests/web_scrap/: app.py  main.py
Tests/web_scrap/templates/: index.html
instance/: Users.db
static/: app0.js  dashboard.css  login-page-style.css  signup-page-style.css
templates/: add_goal.html  dashboard.html  expenses.html  hist.html  login.html  market.html  signup.html  signup1.html  signup2.html  test.html
