[project]
name = "tests"
version = "0.1.0"
description = ""
authors = [
    {name = "El mehdi",email = "Amgharyelmehdi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
